--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.7",
+    "@react-native-firebase/app": "^13.1.0",
+    "@react-native-firebase/firestore": "^13.1.0",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
@@ -21,6 +23,7 @@
     "@thecodingmachine/redux-toolkit-wrapper": "2.0.1",
     "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^0.21.4",
+    "firebase": "^9.6.0",
     "i18next": "^20.6.1",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
