feat: add google oAuth and manage user session with AsyncStorage fix: delete unused comments and console.log

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -127,7 +127,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.testapp"
+        applicationId "com.ecom.rn.onlinestore"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
