--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^5.x",
     "@reduxjs/toolkit": "^1.6.1",
     "@thecodingmachine/redux-toolkit-wrapper": "2.0.1",
