--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.7",
+    "@react-native-community/checkbox": "^0.5.9",
     "@react-native-firebase/app": "^13.1.0",
     "@react-native-firebase/auth": "^13.1.0",
     "@react-native-firebase/firestore": "^13.1.0",
@@ -31,8 +32,10 @@
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-i18next": "^11.12.0",
-    "react-native": "0.65.1",
+    "react-native": "^0.66.4",
+    "react-native-awesome-alerts": "^1.5.2",
     "react-native-azure-auth": "^1.8.1",
+    "react-native-bouncy-checkbox": "^2.1.8",
     "react-native-flipper": "^0.113.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
@@ -45,7 +48,9 @@
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-flipper": "^2.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^3.0.1",
+    "redux-persist-transform-filter": "^0.0.20"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
