feat: add search features fix: add debounce in custom value cart

--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@react-navigation/stack": "^5.x",
     "@reduxjs/toolkit": "^1.6.1",
     "@thecodingmachine/redux-toolkit-wrapper": "2.0.1",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^0.21.4",
     "firebase": "^9.6.0",
     "i18next": "^20.6.1",
+    "lodash.debounce": "^4.0.8",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-i18next": "^11.12.0",
