--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ buck-out/
 /ios/Pods/
 
 template/plugins/typescript/template/tsconfig.json
+azureOAuthCredentials.json
+googleOAuthCredentials.json
